--- a/package.json
+++ b/package.json
@@ -16,19 +16,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/uuid": "^10.0.0",
     "axios": "^1.8.4",
+    "katex": "^0.16.21",
     "lucide-react": "^0.344.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.3",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
+    "rehype-katex": "^7.0.1",
+    "rehype-prism-plus": "^2.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "electron": "34.2.0",
