--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "type": "module",
   "main": "app/out-tsc/main.js",
   "scripts": {
-    "dev": "npm-run-all -p electron:serve vite:dev",
+    "dev": "concurrently \"pnpm electron:serve\" \"pnpm vite:dev\"",
     "vite:dev": "vite",
-    "build": "vite build && npm run electron:serve-tsc",
-    "build:prod": "vite build --mode production && npm run electron:serve-tsc",
+    "build": "vite build && pnpm run electron:serve-tsc",
+    "build:prod": "vite build --mode production && pnpm run electron:serve-tsc",
     "electron:serve-tsc": "tsc -p app/tsconfig.json",
-    "electron:serve": "wait-on tcp:5173 && npm run electron:serve-tsc && electron . --serve",
-    "electron:build:current_platform": "rimraf ./release/ && npm run build:prod && electron-builder build --publish=never",
+    "electron:serve": "wait-on tcp:5173 && pnpm run electron:serve-tsc && electron . --serve",
+    "electron:build:current_platform": "rimraf ./release/ && pnpm run build:prod && electron-builder build --publish=never",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -40,6 +40,7 @@
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "concurrently": "^9.1.2",
     "electron": "34.2.0",
     "electron-builder": "25.1.8",
     "electron-debug": "4.1.0",
@@ -48,7 +49,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
-    "npm-run-all": "4.1.5",
     "postcss": "^8.4.35",
     "rimraf": "6.0.1",
     "tailwindcss": "^3.4.1",
