--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.2",
+    "@ai-sdk/fireworks": "^0.2.2",
+    "@ai-sdk/google": "^1.2.3",
+    "@ai-sdk/openai": "^1.3.4",
+    "@ai-sdk/togetherai": "^0.2.2",
+    "@openrouter/ai-sdk-provider": "^0.4.5",
+    "ai": "^4.2.8",
     "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "katex": "^0.16.21",
     "lucide-react": "^0.344.0",
     "primeicons": "^7.0.0",
@@ -30,7 +38,8 @@
     "rehype-prism-plus": "^2.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
