--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "electron-builder": "26.0.12",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "katex": "^0.16.21",
     "lucide-react": "^0.344.0",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.1",
     "react-markdown": "^10.1.0",
     "rehype-katex": "^7.0.1",
     "rehype-prism-plus": "^2.0.0",
