--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "i18next-browser-languagedetector": "^8.0.4",
     "katex": "^0.16.21",
     "lucide-react": "^0.344.0",
+    "mime": "^4.0.7",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.30.0",
     "react": "^18.3.1",
